# veriRL

./: .env.example  .gitignore  BLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASES.md  SUBMISSION_CHECKLIST.md  __init__.py  client.py  config.yaml  hf_jobs.py  inference.py  modal_infra.py  models.py  multi_agent_run.py  openenv.yaml  pyproject.toml  validation.sh
.changelog.d/: 0001.doc.md  0001.feature.md  0002.feature.md  0003.bugfix.md  10.feature.md  11.bugfix.md  12.bugfix.md  13.bugfix.md  14.feature.md  15.doc.md  16.bugfix.md  17.feature.md  18.bugfix.md  19.bugfix.md  README.md  auto-release.feature.md  blog-route.feature.md  blog.feature.md  bugfix_final_score_clamping.md  clamp-rewards.bugfix.md  docs-audit.doc.md  docs-training-guide.doc.md  end-score-field.bugfix.md  evolutionary-grpo.feature.md  fix-release-workflow.misc.md  fix-score-range.bugfix.md  grand-finale.feature.md  grpo-eval.feature.md  grpo-fast-curriculum.misc.md  grpo-relu-clip-100.misc.md  grpo-shaped-rewards.misc.md  grpo-wandb-hfjobs.misc.md  hf-colors.bugfix.md  hf-metadata.bugfix.md  inference-parser.bugfix.md  inference-safe-score.bugfix.md  init.feature.md  multi-agent-demo.feature.md  netlist-visualization.feature.md  phase2-score-range.bugfix.md  (+9 more)
.github/: BRANCH_PROTECTION.md  DEPLOYMENT.md  SETUP.md
.github/workflows/: ci-cd.yml  deploy.yml  release.yml  validate.yml
docs/: plan.md
infra/: hf_jobs.py  modal_env.py  modal_infra.py  modal_merge.py
problems/task10_fp16_adder/: properties.sv  reference.v  spec.md  testbench.v
problems/task1_mac/: reference.v  spec.md  testbench.v
problems/task2_axi_fifo/: reference.v  spec.md  testbench.v
problems/task3_systolic/: reference.v  spec.md  testbench.v
problems/task4_relu_clip/: properties.sv  reference.v  spec.md  testbench.v
problems/task5_barrel_shifter/: reference.v  spec.md  testbench.v
problems/task6_register_file/: properties.sv  reference.v  spec.md  testbench.v
problems/task7_ring_buffer/: reference.v  spec.md  testbench.v
problems/task8_dot_product/: reference.v  spec.md  testbench.v
problems/task9_fir_filter/: reference.v  spec.md  testbench.v
scripts/: bump_version.py  visualize_netlist.py
server/: Dockerfile  __init__.py  app.py  evaluator.py  verirl_env_environment.py
tests/: __init__.py  conftest.py  test_environment.py  test_evaluator.py  test_integration.py  test_models.py  test_new_tasks.py
training/: config.py  curriculum.py  dataset.py  environment.py  hf_eval_models.py  hf_train_grpo.py  hf_train_sft.py  reward.py  runtime.py  sft.py  test_sft.py  train.py  trainer.py  wandb_task_logging.py
