# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-verirl_env"
version = "0.4.0"
description = "Verilog hardware design environment for OpenEnv — trains LLMs to write RTL for AI-accelerator primitives"
requires-python = ">=3.10"
dependencies = [
    "omegaconf>=2.3.0",
    "openai>=2.30.0",
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # For loading .env files in inference.py
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "towncrier>=23.11.0",
]
training = [
    # Core training stack — always installed
    "torch>=2.3.1",
    "transformers>=4.57",
    "trl>=0.28.0",
    "peft>=0.12.0",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.3",
    "wandb>=0.17.0",
    "huggingface_hub>=0.24.0",
    "datasets>=3.5.1",
    "numpy",
    "omegaconf>=2.3.0",
    "modal>=1.0.0",
    # Linux-only: vllm requires CUDA; trl[vllm] pulls in the vllm extras
    "vllm==0.12.0; sys_platform == 'linux'",
    "trl[vllm]==0.28.0; sys_platform == 'linux'",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m verirl_env.server.app
server = "verirl_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["verirl_env", "verirl_env.server"]
package-dir = { "verirl_env" = ".", "verirl_env.server" = "server" }

[tool.setuptools.package-data]
verirl_env = ["**/*.yaml", "**/*.yml", "problems/**/*.v", "problems/**/*.sv", "problems/**/*.md"]

[tool.towncrier]
package = "verirl_env"
directory = ".changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
template = ".changelog.d/template.md"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false
